--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.3",
+    "@tailwindcss/postcss": "^4.0.5",
+    "@tailwindcss/vite": "^4.0.5",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -34,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^4.0.5",
     "vite": "^6.0.5"
   }
 }
